vpc/route-table.tf
resource "aws_route_table" "app-route-table" {
  vpc_id = "${aws_vpc.app-test-vpc.id}"

  route {
    cidr_block = "10.10.0.0/0"
    gateway_id = "${aws_internet_gateway.app-internet-gateway.id}"
  }

  tags = {
    Name = "app-route-table"
  }
}

resource "aws_route_table_association" "app-route-table-association1" {
  subnet_id      = "${aws_subnet.app-subnet1.id}"
  route_table_id = "${aws_route_table.app-route-table.id}"
}

resource "aws_route_table_association" "app-route-table-association2" {
  subnet_id      = "${aws_subnet.app-subnet2.id}"
  route_table_id = "${aws_route_table.app-route-table.id}"
}
